# whatspyc

./: .gitignore  README.md  pyproject.toml
src/whatspyc/: __init__.py  __main__.py  cli.py  config.py  log.py
src/whatspyc/data/: channels.toml  emoji_groups.json
src/whatspyc/store/: schema.sql  store.py
src/whatspyc/transport/: ax25_frame.py  ax25_l2.py  ax25_segment.py  base.py  direct_tcp.py  kiss_frame.py  kiss_serial.py  kiss_tcp.py  rhp_session.py  rhp_tcp.py  rhp_ws.py
src/whatspyc/ui/: __init__.py  emoji_catalog.py  help.py  line.py  options.py  textual_ui.py  tui.py  urwid_ui.py
src/whatspyc/wps/: client.py  codec.py  connect_seq.py  hop_script.py  messages.py
tests/: fake_node.py  fake_wps.py  fake_wps_seed.py  test_ax25_frame.py  test_ax25_l2.py  test_ax25_segment.py  test_client.py  test_config.py  test_emoji_catalog.py  test_hop_script.py  test_kiss_frame.py  test_line_ui_input.py  test_log.py  test_mentions.py  test_messages.py  test_nodecmd_state_layout.py  test_nodecmd_validation.py  test_offline.py  test_reply.py  test_rhp_session.py  test_store.py  test_tui_perf.py  test_ui_history.py  test_urwid_smoke.py  test_wps_codec.py
tests/integration/: test_direct_tcp_fakewps.py  test_fakewps_seed.py  test_kiss_ackmode.py  test_kiss_tcp_loopback.py  test_node_hop.py  test_remote_smoke.py
