[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatspyc"
version = "0.1.1"
description = "Command-line client for the WhatsPac packet-radio chat service"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matt 2E0HKD" }]
dependencies = [
    "click>=8.1",
    "websockets>=12.0",
    "prompt_toolkit>=3.0.43",
    "textual>=0.60",
    "urwid>=2.6",
    "emoji>=2.10",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
whatspyc = "whatspyc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whatspyc = ["store/schema.sql", "data/channels.toml", "data/emoji_groups.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
